# Tlang

./: CMakeLists.txt  README.md  a.out.c
doc/: AST.md  ASTHierarchy.drawio
include/: ast.h  builtins.h  codegen.h  map.h  queue.h  safe.h  stack.h  typechecker.h  vector.h
include/ast/: bool.h  class.h  def.h  double.h  expression.h  function.h  hold.h  if_block.h  int.h  l_expr.h  paren.h  program.h  r_expr.h  ref.h  return.h  statement.h  string.h  trait.h  tuple.h  typed_var.h  variable.h
src/: ast.c  builtins.c  codegen.c  main.c  map.c  parser.y  queue.c  safe.c  scanner.l  stack.c  typechecker.c  vector.c
src/ast/: bool.c  class.c  def.c  double.c  expression.c  function.c  hold.c  if_block.c  int.c  paren.c  program.c  ref.c  return.c  string.c  trait.c  tuple.c  typed_var.c  variable.c
